# github_user_activity

./: .gitignore  README.md  main.py  pyproject.toml
src/github_user_activity/: event_types.py  fetcher.py  main.py  module.py  view.py
src/gua/: fetcher.py  handlers.py  main.py  module.py  typing.py  view.py
tests/: test_fetcher.py  test_module.py
